[Saurabh] AddedSearchApiInCollaborator
